GenericSetup Product Changelog
==============================

GenericSetup 1.5.0 (unreleased)
-------------------------------

- Add 'IChunkedImportContext' interface, allowing RAM-efficient chunked
  reads of large files, and implement for 'DirectoryImportContext'.
  (https://bugs.launchpad.net/zope-cmf/+bug/259233)

- Add <genericsetup:upgradeDepends> ZCML tag; defines a specialized upgrade
  step that re-applies one or more import steps from the GS profile during
  an upgrade process

- Add 'IChunkedExportContext' interface, allowing RAM-efficient chunked
  writes of large files, and implement for 'DirectoryExportContext'.
  (https://bugs.launchpad.net/zope-cmf/+bug/257365)

- Provide default for dependencies when processing metadata.xml, to
  avoid a KeyError.
  (https://bugs.launchpad.net/zope-cmf/+bug/255301)

- Handle utility factories cleanly if zope.component >=3.5.0 is used.
 
- tool and utils: Removed deprecated code.

- Update PropertyManagerHelpers to make it possible to remove elements from a
  property by adding a remove="True" attribute to the element. This can
  also be used to reorder elements since new elements are always added
  at the end of the list.

- Made PropertyManagerHelpers class work for non-PropertyManager objects

  o Derived classes can supply a '_PROPERTIES' scehma, which is then used
    to mock up a temporary propertysheet for the object.  The adapter's 
    methods ('_extractProperties', '_purgeProperties', '_initProperties')
    then run against that propertysheet.

- Added logic to respect the destination of upgrade steps when determining
  their applicability. 

- Enhanced the readability of the upgrades tab on the tool.

- Changed upgrade logic to set the current version after an upgrade to the
  destination version of the last step run, instead of the current profile
  version.

- Use the parse_version function from pkg_resources to normalize versions